; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_sfp.c_sfp_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_sfp.c_sfp_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfp = type { {}* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sfp*, i32, i32, i8*, i64)* @sfp_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sfp_write(%struct.sfp* %0, i32 %1, i32 %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.sfp*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.sfp* %0, %struct.sfp** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.sfp*, %struct.sfp** %6, align 8
  %12 = getelementptr inbounds %struct.sfp, %struct.sfp* %11, i32 0, i32 0
  %13 = bitcast {}** %12 to i32 (%struct.sfp*, i32, i32, i8*, i64)**
  %14 = load i32 (%struct.sfp*, i32, i32, i8*, i64)*, i32 (%struct.sfp*, i32, i32, i8*, i64)** %13, align 8
  %15 = load %struct.sfp*, %struct.sfp** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i8*, i8** %9, align 8
  %19 = load i64, i64* %10, align 8
  %20 = call i32 %14(%struct.sfp* %15, i32 %16, i32 %17, i8* %18, i64 %19)
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
